# learn-to-touch-type-keys

./: .gitignore  README.rst  desktop-install  desktop-uninstall  learn_to_touch_type_keys  meson.build  schema-install  schema-uninstall  uk.co.archaicgroves.learntotouchtypekeys.desktop  uk.co.archaicgroves.learntotouchtypekeys.gschema.xml
icons/: learntotouchtypekeys16x16.png.b  learntotouchtypekeys16x16.xcf  learntotouchtypekeys48x48.xcf
text/: INSTALL  LICENSE
